--- a/Chat-App-React/package.json
+++ b/Chat-App-React/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
+    "dompurify": "^3.1.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
